Images are now *very* compressed

--- a/images/index.html
+++ b/images/index.html
@@ -1,6 +1,6 @@
 <html>
  <body>
    What are you doing here? 
-   <a href="..">Click here to go back to myloader</a>
+   <a href="..">Click here to go back to myuploads</a>
  </body>
 </html>
